@@ -1,5 +1,11 @@
 2022-10-02  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* Makefile.am: Add missing file header.
+	* pickles/Makefile.am: Likewise.
+	* maps/Makefile.am: Likewise.
+
+2022-10-02  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe.pk: New file.
 	* pickles/coff.pk: Remove 64-bit optional header, which is
 	actually the PE one.
